Change to BigInteger/BigDecimal in place